tags working, uncleaned

--- a/client/src/App/index.css
+++ b/client/src/App/index.css
@@ -8,6 +8,21 @@ html {
   
 }
 
+svg, #tag-line{
+  width: 100
+}
+
+.Card-container {
+  /* background-color: white; */
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+  min-width: 19rem;
+  max-width: 40rem;
+  /* margin-left: 0px; */
+  /* margin-right: 0px; */
+  width: 100%;
+}
+
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -18,7 +33,10 @@ html {
 }
 
 .Search-bar {
+  max-width: 40rem;
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
   padding-top: 2rem;
   padding-bottom: 2rem;
-  width: 80vh;
+  width: 100%;
 }
