--- a/client/src/App/index.css
+++ b/client/src/App/index.css
@@ -27,6 +27,7 @@ svg, #tag-line{
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  padding-bottom: 0px;
 }
 
 .Search-bar {
